--- a/CinemaBook/Scence/Booking/BookingChair/view/cell/ItemChairCollectionViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingChair/view/cell/ItemChairCollectionViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,28 +11,30 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemChairCollectionViewCell" customModule="CinemaBook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-delete-share-point" translatesAutoresizingMaskIntoConstraints="NO" id="efO-1I-PLf">
-                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A11" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQV-HL-GfL">
+                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <color key="backgroundColor" red="0.87843137250000003" green="0.078431372550000003" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="efO-1I-PLf" secondAttribute="bottom" id="301-YK-bW3"/>
-                <constraint firstItem="efO-1I-PLf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9k5-Lh-daZ"/>
-                <constraint firstItem="efO-1I-PLf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Dhk-Jg-mAa"/>
-                <constraint firstAttribute="trailing" secondItem="efO-1I-PLf" secondAttribute="trailing" id="KYr-V1-ALp"/>
+                <constraint firstAttribute="trailing" secondItem="fQV-HL-GfL" secondAttribute="trailing" id="D4y-Bc-rdb"/>
+                <constraint firstItem="fQV-HL-GfL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Dme-OG-OcQ"/>
+                <constraint firstItem="fQV-HL-GfL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="QSK-4F-yrb"/>
+                <constraint firstAttribute="bottom" secondItem="fQV-HL-GfL" secondAttribute="bottom" id="RKL-Tz-cwB"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="30" height="35"/>
+            <point key="canvasLocation" x="139.13043478260872" y="114.50892857142857"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="icon-delete-share-point" width="26" height="26"/>
-    </resources>
 </document>
